# solana-bot

./: .gitignore  Cargo.toml  README.md
src/: client.rs  deliquency_check.rs  logger.rs  main.rs  settings.rs
src/checkers/: balance_check.rs  deliquency_check.rs  mod.rs  node_stats.rs
