[package]
name = "solana-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client-helpers = "1.0"
solana-client = "1.10.26"
solana-sdk = "1.10.26"
humantime = "2.1.0"
solana-account-decoder = "1.10.26"
solana-stake-program = "1.10.26"
serde_json = "1.0.81"
serde_derive = "1.0.137"
serde = "1.0.137"
ureq = { version = "2.0.0", features = ["json"]}