[package]
name = "solana-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client-helpers = "1.1.0"
solana-client = "1.17.17"
solana-sdk = "1.17.17"
humantime = "2.1.0"
solana-account-decoder = "1.17.17"
solana-stake-program = "1.17.17"
serde_json = "1.0.111"
serde_derive = "1.0.195"
serde = "1.0.195"
ureq = { version = "2.9.1", features = ["json"]}
humantime-serde = "1.1.1"
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18" , features =  ["env-filter", "json"] }
tracing-log = "0.2.0"
chrono = "0.4.34"